--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
     </div>
     <br>
     <center>
-      <img src="{{url_for('static', filename='brands.png')}}" style="max-width: 49em">
+      <img src="{{url_for('static', filename='brands.png')}}" class="indexbrands">
     </center>
     <br>
     <br>
