--- a/templates/new.html
+++ b/templates/new.html
@@ -78,7 +78,7 @@
   </div>
   <br>
   <main>
-    <center><img src="{{url_for('static', filename='newbanner.png')}}" class="newbanner"></center>
+    <center><img src="{{url_for('static', filename='newbanner.png')}}" class="newbanner img-fluid"></center>
     <div class="newmain">
         <h1 class="newnew">New</h1>
       <a href="product/nike-airjordans-XXXVI-low" class="linktoproduct">
