--- a/templates/product/airmax97.html
+++ b/templates/product/airmax97.html
@@ -92,7 +92,7 @@
         <br>
         <h1 class="product-name">Air Max 97</h1>
         <p class="product-price">$206.33</p>
-        <a href=""><button class="addtocart">Add to Cart</button></a>
+        <a href=""><button class="addtocart">Buy Now</button></a>
         <p class="product-desc">With an iconic design inspired by Japanese bullet trains and water droplets, push your style full speed ahead in the Air Max 97. Full-length Nike Air cushioning lets you ride in first-class comfort.</p>
     </div>
     <div class="reccomended">
