--- a/templates/product/airmaxplusog.html
+++ b/templates/product/airmaxplusog.html
@@ -92,7 +92,7 @@
         <br>
         <h1 class="product-name">Air Max Plus OG</h1>
         <p class="product-price">$205.90</p>
-        <a href=""><button class="addtocart">Add to Cart</button></a>
+        <a href=""><button class="addtocart">Buy Now</button></a>
         <p class="product-desc">Rare and coveted style pairs with Air Max DNA in this retro of the 'Scarab' Air Max Plus. First dropped over twenty years ago, its colour-shifting synthetic upper done in Metallic Gold and Metallic Copper adds a futuristic look. The clear plastic fingers (originally inspired by palm trees and ocean waves) bring natural harmony to every step, while gradient details throughout boost the energy. Classic black accents contrast perfectly against the iridescent finishes. And because we know you're going places, the tuned Air underfoot offers premium stability and unbelievable cushioning. Lace-up and celebrate your defiant style.</p>
     </div>
     <div class="reccomended">
