--- a/templates/product/tiempolegend9.html
+++ b/templates/product/tiempolegend9.html
@@ -92,7 +92,7 @@
         <br>
         <h1 class="product-name">Tiempo Legend 9 Elite FG</h1>
         <p class="product-price">$295.06</p>
-        <a href=""><button class="addtocart">Add to Cart</button></a>
+        <a href=""><button class="addtocart">Buy Now</button></a>
         <p class="product-desc">One of our lightest Tiempos to date, the Nike Tiempo Legend 9 Elite FG lets you go on the offensive with a low-profile design that's reinvented for attackers. The upper has raised textures backed by soft foam pods for precise dribbling, passing and shooting, while studs on the bottom provide traction for quick cuts and sudden stops.</p>
     </div>
     <div class="reccomended">
