--- a/templates/product/vansxdaniel.html
+++ b/templates/product/vansxdaniel.html
@@ -92,7 +92,7 @@
         <br>
         <h1 class="product-name">Vans X Daniel Johnston Hoodie</h1>
         <p class="product-price">$74.50</p>
-        <a href=""><button class="addtocart">Add to Cart</button></a>
+        <a href=""><button class="addtocart">Buy Now</button></a>
         <p class="product-desc">This season we have teamed up with Daniel Johnston’s friends, family, and the “Hi, How Are You Project” to inspire new conversations around mental health issues by funding and creating thoughtful media content, projects, and events. We stand in support of their mission to remove the stigma and shame around mental health, so people will feel open to communicate, one conversation at a time.</p>
     </div>
     <div class="reccomended">
