--- a/templates/product/zoomxinvinciblerunflyknit2.html
+++ b/templates/product/zoomxinvinciblerunflyknit2.html
@@ -92,7 +92,7 @@
         <br>
         <h1 class="product-name">ZoomX Invincible Run Flyknit 2</h1>
         <p class="product-price">$203.26</p>
-        <a href=""><button class="addtocart">Add to Cart</button></a>
+        <a href=""><button class="addtocart">Buy Now</button></a>
         <p class="product-desc">Avoiding injury is crucial whether you're tackling a 20-miler in the middle of marathon prep or stockpiling Tempo Runs together. Specifically designed to offset the attrition of your toughest trainings, these shoes boast a stack of mattress-like cushioning to help you stay on your feet today, tomorrow and beyond. An unbelievable sense of springy propulsion entices you into taking another stride (and then another) for responsive comfort that lets you focus on your run—not the potential repercussions.</p>
     </div>
     <div class="reccomended">
