--- a/templates/product/airforce1react.html
+++ b/templates/product/airforce1react.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">Air Force 1 React</h1>
         <p class="product-price">$153.94</p>
-        <a href=""><button class="addtocart">Add to Cart</button></a>
+        <form method="post">
+          <input type="" value="airforce1react" hidden  name="airforce1react" id="airforce1react">
+          <a href="#"><input type="submit" value="Buy Now" class="addtocart"></a>
+        </form>
         <p class="product-desc">From hoops staple to urban street legend, the Nike AF-1 React takes another step forward into shoe iconography. Amplified features from the outsole to the branding add dramatic expression to the storied look while Nike React tech assists with a smooth ride. Now you can stand out to fit in.</p>
     </div>
     <div class="reccomended">
