--- a/templates/product/jordanair.html
+++ b/templates/product/jordanair.html
@@ -92,7 +92,7 @@
         <br>
         <h1 class="product-name">Jordan Air</h1>
         <p class="product-price">$29.12</p>
-        <a href=""><button class="addtocart">Add to Cart</button></a>
+        <a href=""><button class="addtocart">Buy Now</button></a>
         <p class="product-desc">This 100% cotton tee is cool and comfy, on and off the court. An easy fit and Jordan graphics on both sides will have you reaching for it daily.</p>
     </div>
     <div class="reccomended">
