--- a/templates/product/sbnyjahfree2.html
+++ b/templates/product/sbnyjahfree2.html
@@ -92,7 +92,7 @@
         <br>
         <h1 class="product-name">SB Nyjah Free 2</h1>
         <p class="product-price">$102.56</p>
-        <a href=""><button class="addtocart">Add to Cart</button></a>
+        <a href=""><button class="addtocart">Buy Now</button></a>
         <p class="product-desc">The Nike SB Nyjah Free 2 is a sequel worthy of its predecessor. Inspired by the iconic Nike Air Zoom Spiridon, the original rubber design has been updated with mesh panels to help your feet stay cool through your hottest skate sessions.</p>
     </div>
     <div class="reccomended">
