--- a/templates/product/AirJordansXXXVILow.html
+++ b/templates/product/AirJordansXXXVILow.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">Air Jordan XXXVI Low</h1>
         <p class="product-price">$256.57</p>
-        <a href=""><button class="addtocart">Buy Now</button></a>
+        <form method="post">
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
+        </form>
         <p class="product-desc">From the perimeter to the hoop, take the court with confidence. This is one of the lightest Air Jordan game shoes to date, with a minimal but durable leno-weave upper reinforced with tough plastic details. Meanwhile, Zoom Air cushioning delivers energy return and elite responsiveness. The game asks for everything—now you have the shoe to match.</p>
     </div>
     <div class="reccomended">
