--- a/templates/product/MFICBOH.html
+++ b/templates/product/MFICBOH.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">M FI CB OH</h1>
         <p class="product-price">$61.48</p>
-        <a href=""><button class="addtocart">Buy Now</button></a>
+        <form method="post">
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
+        </form>
         <p class="product-desc">Adidas M FI CB OH for leisure and sports. The sportswear from the adidas brand has the right equipment for every sport and combines technology and comfort in every piece of clothing without losing style.</p>
     </div>
     <div class="reccomended">
