--- a/templates/product/airforce1react.html
+++ b/templates/product/airforce1react.html
@@ -93,8 +93,8 @@
         <h1 class="product-name">Air Force 1 React</h1>
         <p class="product-price">$153.94</p>
         <form method="post">
-          <input type="" value="airforce1react" hidden  name="airforce1react" id="airforce1react">
-          <a href="#"><input type="submit" value="Buy Now" class="addtocart"></a>
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
         </form>
         <p class="product-desc">From hoops staple to urban street legend, the Nike AF-1 React takes another step forward into shoe iconography. Amplified features from the outsole to the branding add dramatic expression to the storied look while Nike React tech assists with a smooth ride. Now you can stand out to fit in.</p>
     </div>
