--- a/templates/product/airjordan1.html
+++ b/templates/product/airjordan1.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">Air Jordan 1 Zoom Air Comfort</h1>
         <p class="product-price">$128</p>
-        <a href=""><button class="addtocart">Buy Now</button></a>
+        <form method="post">
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
+        </form>
         <p class="product-desc">Step into comfort with the Air Jordan 1 Zoom Air Comfort. Refined to make one of history's most iconic sneakers more wearable, it combines full-grain leather in the upper with a cosy lining and responsive cushioning.</p>
     </div>
     <div class="reccomended">
