--- a/templates/product/dunksvioletagednavy.html
+++ b/templates/product/dunksvioletagednavy.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">Dunks Violet</h1>
         <p class="product-price">$365.53</p>
-        <a href=""><button class="addtocart">Buy Now</button></a>
+        <form method="post">
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
+        </form>
         <p class="product-desc">The Nike women’s Dunk Low ‘Vintage Navy’ showcases a familiar two-tone palette that recalls the ‘Villanova’ colorway from the original ‘Be True to Your School’ series from 1985. Unlike its OG predecessor, this pair features a low-cut build, complete with a pre-yellowed rubber midsole that accentuates the sneaker’s vintage aesthetic. The all-leather upper combines a clean white base with contrasting navy overlays and a color-matched Swoosh.</p>
     </div>
     <div class="reccomended">
