--- a/templates/product/paintdripgraphic.html
+++ b/templates/product/paintdripgraphic.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">Paint Drip Graphic Hoodie</h1>
         <p class="product-price">$59.99</p>
-        <a href=""><button class="addtocart">Buy Now</button></a>
+        <form method="post">
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
+        </form>
         <p class="product-desc">Colorful artwork brings painterly inspiration to our icon on this easy graphic hoodie. A drawstring adjustable hood, kanga pocket, and ribbed knit hem plays host to a graphic that literally drips with creativity. Our icon, your way.</p>
     </div>
     <div class="reccomended">
