--- a/templates/product/taylorallstarclassic.html
+++ b/templates/product/taylorallstarclassic.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">Taylor All Star Classic</h1>
         <p class="product-price">$69.42</p>
-        <a href=""><button class="addtocart">Buy Now</button></a>
+        <form method="post">
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
+        </form>
         <p class="product-desc">We could tell you that it's the OG basketball shoe, created over 100 years ago. Or that the design has largely stayed the same, because why mess with a good thing. Or how it became the unofficial sneaker of all your favorite artists and musicians, who each made it their own. Yeah, we could share a lot of stories, but the one that matters most isn’t ours—it’s yours. It’s how and where you take your Chucks. The legacy is long, but what comes next is up to you. We just make the shoe. You make the stories.</p>
     </div>
     <div class="reccomended">
