--- a/templates/product/beachsliders.html
+++ b/templates/product/beachsliders.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">Premium Beach Sliders</h1>
         <p class="product-price">$29.95</p>
-        <a href=""><button class="addtocart">Buy Now</button></a>
+        <form method="post">
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
+        </form>
         <p class="product-desc">Superdry Premium beach sliders. Stroll the beach in style this season with these premium beach sliders featuring, a microfibre foot strap, moulded footbed and all over subtle camo print lining. Finished with a textured Superdry logo across the foot strap and a Superdry logo badge on the sole.</p>
     </div>
     <div class="reccomended">
