--- a/templates/product/vanssk8hi.html
+++ b/templates/product/vanssk8hi.html
@@ -92,7 +92,10 @@
         <br>
         <h1 class="product-name">SK8-Hi</h1>
         <p class="product-price">$72.38</p>
-        <a href=""><button class="addtocart">Buy Now</button></a>
+        <form method="post">
+          <input hidden>
+          <a href="#"><input type="submit" value="Add to cart" class="addtocart"></a>
+        </form>
         <p class="product-desc">The Sk8-Hi was introduced in 1978 as Style 38, and showcased the now-iconic Vans Sidestripe on a new, innovative high top silhouette. As only the second model featuring the recognizable marker formerly known as the “jazz stripe,” the Sk8-Hi brought a whole new look to the Vans family.  Honoring that first legendary high top, the Sk8-Hi is made with sturdy suede and canvas uppers in a variety of classic and unexpected colorways. This lace-up shoe also includes re-enforced toe caps, supportive padded collars, and signature rubber waffle outsoles.</p>
     </div>
     <div class="reccomended">
