--- a/static/style.css
+++ b/static/style.css
@@ -967,3 +967,87 @@ footer{
         transform: translateX(-50%);
     }
 }
+
+.cartuser{
+    float: right;
+    margin-top: 2em;
+    margin-right: 3em;
+}
+
+.cartitem{
+    width: 54em;
+    height: 8em;
+    margin-left: 2em;
+    margin-top: 2em;
+    background: #161616;
+    border-radius: 13px;
+}
+
+.cartmain{
+    margin-top: 3em;
+    margin-left: 2em;
+    overflow-y: scroll;
+    height: 35em;
+    width: 60%;
+}
+
+.productname{
+    color: white;
+    font-size: 1.3em;
+    font-weight: 400;
+    font-family: 'Raleway', sans-serif;
+    margin-left: 2em;
+    padding-top: 2.3em;
+}
+
+.cartcost{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    display: inline;
+    color: white;
+    float: right;
+    margin-right: 2em;
+    margin-top: 0;
+    padding-top: 0;
+}
+
+@media screen and (max-width:1516px) {
+    .cartmain{
+        width: 70%;
+    }
+}
+
+@media screen and (max-width:1314px) {
+    .cartmain{
+        width: 80%;
+    }
+}
+
+@media screen and (max-width:1148px) {
+    .cartmain{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:1018px) {
+    .cartmain{
+        width: 100%;
+        margin-right: 20%;
+    }
+    .cartitem{
+        width: 45em;
+        margin-right: 2em;
+    }
+}
+
+
+@media screen and (max-width:807px) {
+    .cartmain{
+        width: 100%;
+        margin-right: 20%;
+    }
+    .cartitem{
+        width: 25em;
+        margin-right: 2em;
+    }
+}
