--- a/templates/cart.html
+++ b/templates/cart.html
@@ -55,7 +55,7 @@
       <div class="cartmain">
         {% for product in products %}
         <div class="cartitem">
-            <p class="productname">{{product[0]}} Lorem Ipsum yes<span class="cartcost">${{product[1]}}</span></p>
+            <p class="productname">{{product[0]}}<span class="cartcost">${{product[1]}}</span></p>
         </div>
        
          {% endfor %}
